idea inspection fixed: Can be replaced with 'List.of()' call